library/src/libqevent.h

typedef struct QEventPoint QEventPoint;
typedef struct QHoverEvent QHoverEvent;
typedef struct QInputDevice QInputDevice;
typedef struct QInputEvent QInputEvent;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QPointerEvent QPointerEvent;
typedef struct QPointingDevice QPointingDevice;
typedef struct QSinglePointEvent QSinglePointEvent;
typedef struct QWheelEvent QWheelEvent;
QTLIBC_API QInputDevice* QInputEvent_Device(const QInputEvent* self);
QTLIBC_API int QInputEvent_DeviceType(const QInputEvent* self);
QTLIBC_API int QInputEvent_Modifiers(const QInputEvent* self);
QTLIBC_API void QInputEvent_SetModifiers(QInputEvent* self, int modifiers);
QTLIBC_API unsigned long long QInputEvent_Timestamp(const QInputEvent* self);
QTLIBC_API QPointingDevice* QPointerEvent_PointingDevice(const QPointerEvent* self);
QTLIBC_API int QPointerEvent_PointerType(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetTimestamp(QPointerEvent* self, unsigned long long timestamp);
QTLIBC_API ptrdiff_t QPointerEvent_PointCount(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_Point(QPointerEvent* self, ptrdiff_t i);
QTLIBC_API libqt_list /* of QEventPoint* */ QPointerEvent_Points(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_PointById(QPointerEvent* self, int id);
QTLIBC_API bool QPointerEvent_AllPointsGrabbed(const QPointerEvent* self);
QTLIBC_API bool QPointerEvent_AllPointsAccepted(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetAccepted(QPointerEvent* self, bool accepted);
QTLIBC_API QObject* QPointerEvent_ExclusiveGrabber(const QPointerEvent* self, QEventPoint* point);
QTLIBC_API void QPointerEvent_SetExclusiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* exclusiveGrabber);
QTLIBC_API void QPointerEvent_ClearPassiveGrabbers(QPointerEvent* self, QEventPoint* point);
QTLIBC_API bool QPointerEvent_AddPassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API bool QPointerEvent_RemovePassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API int QSinglePointEvent_Button(const QSinglePointEvent* self);
QTLIBC_API int QSinglePointEvent_Buttons(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_Position(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_ScenePosition(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_GlobalPosition(const QSinglePointEvent* self);
QTLIBC_API QObject* QSinglePointEvent_ExclusivePointGrabber(const QSinglePointEvent* self);
QTLIBC_API void QSinglePointEvent_SetExclusivePointGrabber(QSinglePointEvent* self, QObject* exclusiveGrabber);
QTLIBC_API QHoverEvent* QHoverEvent_new(int typeVal, QPointF* scenePos, QPointF* globalPos, QPointF* oldPos);
QTLIBC_API QHoverEvent* QHoverEvent_new2(int typeVal, QPointF* pos, QPointF* oldPos);
QTLIBC_API QHoverEvent* QHoverEvent_new3(int typeVal, QPointF* scenePos, QPointF* globalPos, QPointF* oldPos, int modifiers);
QTLIBC_API QHoverEvent* QHoverEvent_new4(int typeVal, QPointF* scenePos, QPointF* globalPos, QPointF* oldPos, int modifiers, QPointingDevice* device);
QTLIBC_API QHoverEvent* QHoverEvent_new5(int typeVal, QPointF* pos, QPointF* oldPos, int modifiers);
QTLIBC_API QHoverEvent* QHoverEvent_new6(int typeVal, QPointF* pos, QPointF* oldPos, int modifiers, QPointingDevice* device);
QTLIBC_API QHoverEvent* QHoverEvent_Clone(const QHoverEvent* self);
QTLIBC_API QPoint* QHoverEvent_Pos(const QHoverEvent* self);
QTLIBC_API QPointF* QHoverEvent_PosF(const QHoverEvent* self);
QTLIBC_API bool QHoverEvent_IsUpdateEvent(const QHoverEvent* self);
QTLIBC_API QPoint* QHoverEvent_OldPos(const QHoverEvent* self);
QTLIBC_API QPointF* QHoverEvent_OldPosF(const QHoverEvent* self);
QTLIBC_API void QHoverEvent_Delete(QHoverEvent* self);
QTLIBC_API QWheelEvent* QWheelEvent_new(QPointF* pos, QPointF* globalPos, QPoint* pixelDelta, QPoint* angleDelta, int buttons, int modifiers, int phase, bool inverted);
QTLIBC_API QWheelEvent* QWheelEvent_Clone(const QWheelEvent* self);
QTLIBC_API QPoint* QWheelEvent_PixelDelta(const QWheelEvent* self);
QTLIBC_API QPoint* QWheelEvent_AngleDelta(const QWheelEvent* self);
QTLIBC_API int QWheelEvent_Phase(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_Inverted(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_IsInverted(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_HasPixelDelta(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_IsBeginEvent(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_IsUpdateEvent(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_IsEndEvent(const QWheelEvent* self);
QTLIBC_API int QWheelEvent_Source(const QWheelEvent* self);
QTLIBC_API void QWheelEvent_Delete(QWheelEvent* self);